--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <section id="experience" class="container">
         <h2>Experience</h2>
         <div class="experience">
-            <h3>Automation Tester - XYZ Solutions</h3>
+            <h3>Automation Projects</h3>
             <p>Developed and maintained test automation frameworks for e-commerce and travel booking platforms, enhancing testing efficiency by 30%.</p>
         </div>
         <div class="experience">
-            <h3>Data Specialist - ABC Corp</h3>
+            <h3>Client Service Delivery Analyst - Notified</h3>
             <p>Maintained large contact datasets and ensured high accuracy in data processing, which was used for product promotions and client outreach.</p>
         </div>
     </section>
