--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="experience" class="container">
         <h2>Experience</h2>
         <div class="experience">
-            <h3>Automation Projects</h3>
+            <h3>Automation Projects - Upskilling </h3>
             <p>Developed and maintained test automation frameworks for e-commerce and travel booking platforms, enhancing testing efficiency by 30%.</p>
         </div>
         <div class="experience">
